fixed address bar issue on mobile

--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ html, body {
     font-family: 'Tinos', serif;
     cursor: pointer;
 }
+@media only screen and (max-width: 1000px) {
+    #header {
+        margin-top: -100px;
+    }
+}
 
 #header img {
     max-width: 100%;
